# vkraytrace

./: .gitignore  CMakeLists.txt
include/: bvh.hpp  image.hpp
src/: bvh.cpp  image.cpp  main.cpp
src/shaders/: CMakeLists.txt  compute.comp
